# nasty

./: .gitignore  CLAUDE.md  FAQ.md  INSTALL.md  README.md  UPDATE.md  build-iso.sh  flake.nix
.claude/memory/: feedback_deployment.md
.github/workflows/: build-cloud-image.yml  build-iso-sdboot.yml  build-iso.yml  cache.yml
docs/: api.md  csi-roadmap.md  version-upgrade-system.md
engine/: Cargo.toml
engine/nasty-api/: Cargo.toml
engine/nasty-api/src/: auth.rs  main.rs  router.rs  terminal.rs
engine/nasty-apidoc/: Cargo.toml
engine/nasty-apidoc/src/: main.rs
engine/nasty-apps/: Cargo.toml
engine/nasty-apps/src/: lib.rs  truecharts.rs
engine/nasty-common/: Cargo.toml
engine/nasty-common/src/: lib.rs  metrics_types.rs
engine/nasty-engine/: Cargo.toml  build.rs
engine/nasty-engine/src/: app_deploy.rs  auth.rs  main.rs  router.rs  telemetry.rs  terminal.rs  vm_console.rs
engine/nasty-metrics/: Cargo.toml
engine/nasty-metrics/src/: collect_bcachefs.rs  collect_kernel.rs  collect_system.rs  db.rs  main.rs  prometheus.rs
engine/nasty-sharing/: Cargo.toml
engine/nasty-sharing/src/: iscsi.rs  nfs.rs  nvmeof.rs  smb.rs
engine/nasty-snapshot/src/: lib.rs
engine/nasty-storage/: Cargo.toml
engine/nasty-storage/src/: cmd.rs  filesystem.rs  pool.rs  subvolume.rs
engine/nasty-system/: Cargo.toml
engine/nasty-system/src/: alerts.rs  backup.rs  firmware.rs  lib.rs  metrics.rs  network.rs  protocol.rs  settings.rs  tailscale.rs  tuning.rs  update.rs
engine/nasty-vm/: Cargo.toml
engine/nasty-vm/src/: lib.rs  qmp.rs
middleware/: Cargo.toml
middleware/nasty-api/: Cargo.toml
middleware/nasty-api/src/: auth.rs  main.rs  router.rs  terminal.rs
middleware/nasty-common/: Cargo.toml
middleware/nasty-common/src/: jsonrpc.rs  lib.rs  state.rs
middleware/nasty-sharing/: Cargo.toml
middleware/nasty-sharing/src/: iscsi.rs  lib.rs  nfs.rs  nvmeof.rs  smb.rs
middleware/nasty-storage/: Cargo.toml
middleware/nasty-storage/src/: cmd.rs  lib.rs  pool.rs  subvolume.rs
middleware/nasty-system/: Cargo.toml
middleware/nasty-system/src/: alerts.rs  lib.rs  protocol.rs  update.rs
nixos/: TESTING.md  appliance-base.nix  binary-cache.nix  cloud.nix  configuration.nix  flake.nix  hardware-configuration.nix  iso.nix  vm.nix
nixos/modules/: bcachefs.nix  china-geolocated.nix  linuxquota.nix  nasty.nix
nixos/modules/limine/: default.nix  limine-install.py
nixos/system-flake/: flake.nix  flake.nix.template  hardware-configuration.nix  networking.nix
tests/: run-tests.sh  run_tests.py  test_cleanup.py  test_iscsi.py  test_nfs.py  test_nvmeof.py  test_shares.py  test_smb.py  test_snapshots.py  test_storage.py  test_subvolume.py
tests/nasty/: client.py  context.py  output.py  shell.py
webui/: .npmrc  README.md  package-lock.json  package.json
webui/src/: app.html  novnc.d.ts
webui/src/lib/: auth.ts  client.ts  confirm-dangerous.svelte.ts  confirm.svelte.ts  format.ts  history.svelte.ts  reboot.svelte.ts  refresh.svelte.ts  rpc.ts  terminalStatus.svelte.ts  theme.svelte.ts  toast.ts  types.ts
webui/src/lib/components/: BcachefsDiagnostics.svelte  ConfirmDangerousDialog.svelte  ConfirmDialog.svelte  ReconnectSpinner.svelte  Toasts.svelte  io-chart.svelte
webui/src/lib/components/ui/button/: button.svelte
webui/src/routes/: +layout.svelte  +page.svelte
webui/src/routes/alerts/: +page.svelte
webui/src/routes/apps/: +page.svelte
webui/src/routes/bcachefs/: +page.svelte
webui/src/routes/disks/: +page.svelte
webui/src/routes/files/: +page.svelte
webui/src/routes/filesystems/: +page.svelte
webui/src/routes/licenses/: +page.svelte
webui/src/routes/pools/: +page.svelte
webui/src/routes/services/: +page.svelte
webui/src/routes/settings/: +page.svelte
webui/src/routes/shares/iscsi/: +page.svelte
webui/src/routes/shares/nfs/: +page.svelte
webui/src/routes/shares/nvmeof/: +page.svelte
webui/src/routes/shares/smb/: +page.svelte
webui/src/routes/sharing/: +page.svelte
webui/src/routes/subvolumes/: +page.svelte
webui/src/routes/terminal/: +page.svelte
webui/src/routes/update/: +page.svelte
webui/src/routes/ups/: +page.svelte
webui/src/routes/users/: +page.svelte
webui/src/routes/vms/: +page.svelte
webui/static/: THIRD-PARTY-LICENSES.md
