[package]
name = "nasty-apidoc"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nasty-apidoc"
path = "src/main.rs"

[dependencies]
nasty-storage = { path = "../nasty-storage" }
nasty-sharing = { path = "../nasty-sharing" }
nasty-system = { path = "../nasty-system" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
