[package]
name = "nasty-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nasty-common = { path = "../nasty-common" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
libc.workspace = true
