[package]
name = "nasty-system"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nasty-common = { path = "../nasty-common" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
schemars.workspace = true
