[package]
name = "nasty-system"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nasty-common = { path = "../nasty-common" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
schemars.workspace = true
libc.workspace = true
base64.workspace = true
rnix = "0.12"
rowan = "0.15"
