[package]
name = "nasty-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nasty-common = { path = "../nasty-common" }
nasty-storage = { path = "../nasty-storage" }
nasty-sharing = { path = "../nasty-sharing" }
nasty-system = { path = "../nasty-system" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
argon2.workspace = true
rand.workspace = true
base64.workspace = true
thiserror.workspace = true
portable-pty.workspace = true
futures-util.workspace = true
